03/endpoint.yml
apiVersion: v1
kind: Endpoints
metadata:
  name: test-endpoint
subsets:
  - addresses:
      - ip: 192.168.5.9
    ports:
      - port: 80
