03/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service

### Ports is a list so a service can have multiple ports mapped to pods ports
### Target port is port at Pod side  
spec:
  ports:
  - port: 8080
    targetPort: 80
  selector:
    app: back
