03/ingress.yml
## service need to deployed prior to deploying ingress 
## ingress works as a layer 7 loadbalancer
## similar to ALB in AWS

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: website01.example.com
    http:
      paths:
      - backend:
          serviceName: service1
          servicePort: 80
  - host: website02.example.com
    http:
      paths:
      - backend:
          serviceName: service2
          servicePort: 80
  - http:
      paths:
      - backend:
          serviceName: service3
          servicePort: 80
